# NeuralNetPractise

./: README.md
mynn/: CMakeLists.txt  coding.cpp  prac.cpp
mynn/dataset/: read.h
mynn/nn/: CrossEntropy.h  Operator.h  Optim.h  Relu.h  Sequential.h  Sgd.h  functor.h  linearOp.h  softmax.h
mynn/tensors/: Matrix.h  batch.h  shape.h  tensor.h  utils.h
