CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(cnn)
SET(CMAKE_CXX_FLAGS "-std=c++14")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/nn/ ${PROJECT_SOURCE_DIR}/tensors/ ${PROJECT_SOURCE_DIR}/dataset/)

ADD_EXECUTABLE(bin/run ${PROJECT_SOURCE_DIR}/prac.cpp)
